# ai-powered-resume-analyzer

./: README.md  main.py  pyproject.toml  resume_analyzer.db
utils/: resume_parser.py
